feat: update to 1.20.6
also fixes a small issue with the highlighted text not fading out properly!